# ethnopians

./: .gitignore  CHANGELOG.md  Cargo.toml  notes.md  noteson relationships stats.txt
macros/: Cargo.toml
macros/src/: lib.rs
src/: actor_id.rs  behavior_tree.rs  behaviour_tree.rs  bin.rs  brothel.rs  combat.rs  formation.rs  kill_share.rs  lib.rs  main.rs  qol.rs  ring.rs  sandbox.rs  social_sim.rs  sqrt.rs  steering.rs  stock_market_fractal.rs  trauma.rs  vec2.rs
src/anger/: mod.rs
src/behavior_tree/: behavior.rs  item.rs  layout.rs  mod.rs  treeturn.rs
src/broadphase/: broadphase.rs  mod.rs
src/broadphase/bvh/: bvh.rs  calculate_morton_code.rs  create_subtree.rs  expand_bits.rs  mod.rs  node.rs  node_type.rs
src/broadphase/sweep_and_prune/: entry.rs  mod.rs  sortie.rs  sweep_and_prune.rs
src/brothel/: client.rs  sample.rs
src/bvh/: calculate_morton_code.rs  create_subtree.rs  expand_bits.rs  intersect.rs  mod.rs  node.rs  node_type.rs  rings.html
src/emotional_dysregulation/: mod.rs
src/general_specific_affinity/: character.rs  determine_preference.rs  event.rs  is_more_specific.rs  mod.rs  preference.rs  rule.rs
src/gossip/: mod.rs
src/mate/: adaptive_threshold.rs  mod.rs  resource_allocation.rs
src/mate_resource_allocation/: mod.rs
src/multi_party_dialogue/: compute_turn_probabilities.rs  mod.rs
src/multi_party_dialogues/: mod.rs
src/museum/: exhibit.rs  guest.rs
src/notes/: amenities.rs  onsen.rs
src/preferances/: mod.rs
src/probing/: apprehension_delta.rs  arousal_delta.rs  arousal_threshold.rs  massage_skill.rs  massagee.rs  masseuse.rs  mod.rs  skillette.rs
src/pubsub/: event.rs  mod.rs
src/pubsub/v2/: column.rs  datum.rs  foo.rs  get_datum_type.rs  mod.rs  relation.rs
src/sandbox/: acts.rs  ai.rs  collision.rs  command.rs  interaction.rs  item.rs  location.rs  mod.rs  movement.rs  return.rs  sandbox.rs  use_object.rs  world.rs
src/sandbox/actions/: action_id.rs  action_result.rs  mod.rs  posible_actions_request.rs  posible_actions_responce.rs  use_object.rs
src/sandbox/ai/: hermit.rs  inpulse_id.rs  instruction.rs  market.rs  mod.rs  stack_item.rs  status.rs  task_pool.rs
src/sandbox/bt/: blackboard_value.rs  correct.rs  cpu.rs  hermit.rs  instruction.rs  mod.rs  node.rs  parser.rs  stack_item.rs  status.rs  thread.rs
src/sandbox/change_request/: action_conflict.rs  change_conflict.rs  change_request.rs  change_request_system.rs  changes.rs  dispatch.rs  mod.rs
src/sandbox/command/: foo.rs  use_object.rs
src/sandbox/forth/: mod.rs
src/sandbox/interaction/: use.rs
src/sandbox/inventory/: inventory.rs  inventory_system.rs  mod.rs
src/sandbox/movement/: collision.rs  mod.rs  process_movement.rs  setup_avals_map.rs  travel_completed.rs  world_wrapper.rs
src/sandbox/new_ai/: mod.rs
src/sandbox/posible_actions/: mod.rs
src/sandbox/world/: execute_commands.rs  mod.rs  step_sim.rs  world.rs
src/seven_emotions/: emotional_state.rs  mod.rs
src/social_sim/: action_desire.rs  actors_most_desired_person_to_interact_with.rs  calc_actors_full_desire_to_interact_with_each_actee.rs  calc_actors_most_desired_action.rs  calc_actors_most_desired_action_for_each_acte.rs  calc_actors_most_desired_action_for_each_actee.rs  calc_actors_most_desired_action_with_actee.rs  calc_h_plus_of_desires_towards_actors.rs  calc_h_plus_of_full_desires_towards_actors.rs  calc_recieved_desire_total.rs  get_actions.rs  h_plus.rs  mod.rs  move.rs  zero_to_one_infinity_to_zero.rs
src/social_sim/types/: action_desire.rs  actor_id.rs  desire.rs  mod.rs  move.rs  time_index.rs
src/stand_alone_complex/: mod.rs
src/stand_alone_complex/behavior_tree/: behavior.rs  layout.rs
src/stand_alone_complex/brothel/: client.rs  mod.rs
src/stand_alone_complex/cleanliness/: mod.rs
src/stand_alone_complex/formation/: mod.rs
src/stand_alone_complex/general_specific_affinity/: response.rs  rule.rs
src/stand_alone_complex/gossip/: character.rs  gossip_content.rs  gossip_impact.rs  main.rs  mod.rs  opinion.rs  opinion_change.rs  personality_traits.rs  relationship.rs
src/stand_alone_complex/kelly_criterion/: mod.rs
src/stand_alone_complex/mate/: resource_allocation.rs
src/stand_alone_complex/museum/: guest.rs  mod.rs
src/stand_alone_complex/ocean/: mod.rs
src/stand_alone_complex/probing/: apprehension_delta.rs  arousal_delta.rs  arousal_threshold.rs  notes.md  skillette.rs
src/stand_alone_complex/pubsub/: event.rs
src/stand_alone_complex/seven_emotions/: mod.rs
src/stand_alone_complex/trauma/: event.rs  mod.rs  (+1 more)
src/steering/: degrees.rs
src/sweep_and_prune/: entry.rs  mod.rs  sortie.rs  sweep_and_prune.rs
src/trauma/: event.rs  experience.rs  mod.rs  psych.rs  trauma_experience_type.rs
src/types/: aa_rect.rs  action_id.rs  actor_id.rs  consts.rs  desire.rs  mod.rs  running_envelope.rs  sweep_and_prune.rs  time_index.rs  vec2.rs
src/util/: danja_distance.rs  h_plus.rs  lerp.rs  mod.rs  running_envelope.rs  sqrt.rs  standard_deviation.rs  sweep_and_prune.rs  wilson_score.rs  zero_to_one_infinity_to_zero.rs
support/: danja_fit.py  danja_fit2.py
(+343 files in other folders)
