[package]
name = "ethnopians"
version = "0.2.0"
edition = "2021"

[lib]
name = "ethnolib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = {path = "./macros"}
derive_more = { version = "1.0.0", features = ["add", "add_assign", "mul"] }
fraction64 = { version = "0.1.15", git = "https://github.com/DrAlta/fraction64.git"}
thats_so_random = {version = "0.2.4", git = "https://github.com/DrAlta/thats_so_random.rs.git"}
qol = { version = "0.1.17", git = "https://github.com/DrAlta/rust_quality_of_life.git"}
macroquad = { version = "0.4.13", optional = true }
base64 = "0.22.1"
nom = "7.1.3"
bevy = {version = "0.15.1", features = ["dynamic_linking"], optional = true }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["defaults", "sandbox"]
defaults = ["log", "debug", "error", "todo", "trace-tests"]
sandbox = ["bevy"]
bevy = ["dep:bevy"]
debug = []
debug-process-movement = []
error = []
log = []
todo = []
trace = ["trace-behavior-tree", "trace-tick"]
trace-behavior-tree = []
trace-tests = []
trace-tick= []#"trace-tick-selector", "trace-tick-sequence"]
trace-tick-selector = []
trace-tick-sequence = []
trace-moveit = []
trace-parser = ["trace-parser-threadette"]
trace-parser-threadette = []
trace-req = ["trace-req-despawn", "trace-req-energy", "trace-req-hp", "trace-req-spawn-location-type"]
trace-req-despawn = []
trace-req-energy = []
trace-req-hp = []
trace-req-spawn-location-type = []
trace-use-object = []
macroquad = ["dep:macroquad"]
warn = []
