[package]
name = "ethnopians"
version = "0.3.6"
edition = "2021"

[lib]
name = "ethnolib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = {path = "./macros"}

base64 = "0.22.1"
bevy = {version = "0.15.1", features = ["dynamic_linking"], optional = true }
derive_more = { version = "1.0.0", features = ["add", "add_assign", "mul"] }
geometwo = { git ="ssh://hsingai@altaserver.local:/media/hsingai/bigdrive/smb/Gits/rust-geometried-2d.git" , version = "0.1.9", features = ["macroquad"] }
nom = "7.1.3"

fraction64 = { version = "0.1.15", git = "https://github.com/DrAlta/fraction64.git"}
qol = { version = "0.1.23", git = "https://github.com/DrAlta/rust_quality_of_life.git"}
thats_so_random = {version = "0.2.4", git = "https://github.com/DrAlta/thats_so_random.rs.git"}

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["defaults", "sandbox"]
defaults = ["log", "debug", "error", "todo", "trace", "trace-tests"]
# systems
sandbox = []
gossip = []
# externals
bevy = ["dep:bevy"]
# logging
debug = []
error = []
log = []
todo = []
trace = ["trace-behavior-tree", "trace-tick"]
trace-behavior-tree = []
trace-tests = []
trace-tick= ["trace-tick-selector", "trace-tick-sequence"]
trace-tick-selector = []
trace-tick-sequence = []
trace-moveit = []
trace-parser = ["trace-parser-threadette"]
trace-parser-threadette = []
warn = []
